--- a/iwtools/requirements.txt
+++ b/iwtools/requirements.txt
@@ -1,7 +1,6 @@
-certifi==2021.10.8
-charset-normalizer==2.0.7
-colorama==0.4.4
-idna==3.3
-requests==2.26.0
-termcolor==1.1.0
-urllib3==1.26.7
+certifi==2022.12.7
+charset-normalizer==3.0.1
+idna==3.4
+PyYAML==6.0
+requests==2.28.2
+urllib3==1.26.14
